--- a/order.html
+++ b/order.html
@@ -218,233 +218,66 @@
     </header>
 
     <main>
-        <section class="slider-container">
-            <div class="mb-5">
-                <div>
-                    <img src="bundles/images/original/checkout.png" alt="" class="img-fluid">
-                </div>
-                <div style="background-color: #00659D; padding: 1.8rem 0; padding-left: 6rem;">
-                    <p class="mb-0 text-light">Home / Checkout Page</p>
-                </div>
-            </div>
-        </section>
-
 
 
         <section class="adjust">
             <div class="container px-16">
                 <div class="container-fluid my-5">
-                    <section class="mb-5">
-                        <div class="pb-5" style="color: black;">
-                            <div>
-                                <h3 class="my-4 fw-bold"> Checkout Page</h3>
+                    <section>
+                        <div>
+                            <h5>Order History</h5>
+                            <div class="row">
+                                <div class="col-9">
 
-                                <div class="row">
-                                    <div class="col-8">
-                                        <div class="d-flex mb-4">
-                                            <div class="position-relative">
-                                                <div style="background-color: #AD884D;" class="skewed-text"></div>
-                                                <div style="background-color: #AD884D;" class="skewed-opposite"></div>
-                                                <p
-                                                    class="position-absolute text-light top-50 start-50 translate-middle fw-bold">
-                                                    Shipping
-                                                </p>
-                                            </div>
-                                            <div class="position-relative">
-                                                <div class="skewed-text"></div>
-                                                <div class="skewed-opposite"></div>
-                                                <p class="position-absolute top-50 start-50 translate-middle fw-bold">
-                                                    Shipping
-                                                </p>
-                                            </div>
-                                            <div class="position-relative">
-                                                <div class="skewed-text"></div>
-                                                <div class="skewed-opposite"></div>
-                                                <p class="position-absolute top-50 start-50 translate-middle fw-bold">
-                                                    Shipping
-                                                </p>
-                                            </div>
-                                            <div class="position-relative">
-                                                <div class="skewed-text"></div>
-                                                <div class="skewed-opposite"></div>
-                                                <p class="position-absolute top-50 start-50 translate-middle fw-bold">
-                                                    Shipping
-                                                </p>
-                                            </div>
-                                        </div>
-                                        <form action="">
-                                            <div class="row g-3">
-                                                <div class="col-6">
-                                                    <input type="text" name="checkoutFirstName" class="form-control"
-                                                        placeholder="First name" aria-label="First name">
-                                                </div>
-                                                <div class="col-6">
-                                                    <input type="text" name="checkoutLastName" class="form-control"
-                                                        placeholder="Last name" aria-label="Last name">
-                                                </div>
-                                                <div class="col-6">
-                                                    <input type="text" name="checkoutCompanyName" class="form-control"
-                                                        placeholder="Company name" aria-label="company name">
-                                                </div>
-                                                <div class="col-6">
-                                                    <input type="text" name="checkoutAddress" class="form-control"
-                                                        placeholder="Address" aria-label="Address">
-                                                </div>
-                                                <div class="col-6">
-                                                    <select name="checkoutCountry" class="form-select"
-                                                        aria-label="select Country">
-                                                        <option selected>Select Country</option>
-                                                        <option value="1">One</option>
-                                                        <option value="2">Two</option>
-                                                        <option value="3">Three</option>
-                                                    </select>
-                                                </div>
-                                                <div class="col-6">
-                                                    <select name="checkoutState" class="form-select"
-                                                        aria-label=" select State">
-                                                        <option selected>Select State</option>
-                                                        <option value="1">One</option>
-                                                        <option value="2">Two</option>
-                                                        <option value="3">Three</option>
-                                                    </select>
-                                                </div>
-                                                <div class="col-6">
-                                                    <input type="text" name="checkoutCity" class="form-control"
-                                                        placeholder="City" aria-label="City">
-                                                </div>
-                                                <div class="col-6">
-                                                    <input type="number" class="form-control" placeholder="Postal Code"
-                                                        aria-label="Postal Code">
-                                                </div>
-                                                <div class="col-6">
-                                                    <input name="checkoutPhone" type="tel" class="form-control"
-                                                        placeholder="Phone" aria-label="Phone">
-                                                </div>
-                                                <div class="col-12">
-                                                    <button type="submit"
-                                                        class="btn rounded-0 text-white brown-btn dark-brownish">CONTINUE</button>
-                                                </div>
-                                            </div>
-                                        </form>
-                                    </div>
-                                    <div class="col-4">
-                                        <div>
-                                            <p class="border-bottom pb-3">Order Summary</p>
-                                            <div class="d-flex border-bottom justify-content-between">
-                                                <p class="ms-3">Subtotal</p>
-                                                <p class="me-3">$910.00</p>
-                                            </div>
-                                            <div class="d-flex pt-3 border-bottom justify-content-between">
-                                                <p class="ms-3">Coupon Code</p>
-                                                <p class="me-3">$20.00</p>
-                                            </div>
-                                            <div class="d-flex pt-3 border-bottom justify-content-between">
-                                                <p class="ms-3">Tax</p>
-                                                <p class="me-3">$150.00</p>
-                                            </div>
-                                            <div class="d-flex pt-3 border-bottom justify-content-between">
-                                                <p class="ms-3">FLAT RATE <br> Shipping</p>
-                                                <p class="me-3">$11.00</p>
-                                            </div>
-                                            <div class="d-flex pt-3 border-bottom justify-content-between">
-                                                <p class="ms-3 fw-bold color-brownish">TOTAL</p>
-                                                <p class="me-3 fw-bold color-brownish">$1051.00</p>
-                                            </div>
-
-                                        </div>
+                                    <div>
+                                        <table class="table table-bordered table-hover">
+                                            <thead class=" table-secondary">
+                                                <tr>
+                                                    <td>ORDER ID</td>
+                                                    <td>STATUS</td>
+                                                    <td colspan="2">DATE ADDED</td>
+                                                    <td>TOTAL</td>
+                                                    <td>...</td>
+                                                </tr>
+                                            </thead>
+                                            <tbody class="">
+                                                <tr>
+                                                    <td>#152459044 </td>
+                                                    <td class="text-success fw-bold">processing</td>
+                                                    <td colspan="2">2023-02-23 15:01:21 </td>
+                                                    <td>₦ 17,300</td>
+                                                    <td> <a href="">
+                                                            <i class="fa-regular text-dark fa-eye arial-hidden="
+                                                                true"></i>
+                                                        </a></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>#152459044 </td>
+                                                    <td class="text-success fw-bold">processing</td>
+                                                    <td colspan="2">2023-02-16 09:33:12 </td>
+                                                    <td>₦ 21,700</td>
+                                                    <td> <a href="">
+                                                            <i class="fa-regular text-dark fa-eye arial-hidden="
+                                                                true"></i>
+                                                        </a></td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
                                     </div>
                                 </div>
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-6">
-                                            <h6 class="my-3">Delivery Method</h6>
-                                            <div>
-                                                <div class="p-3" style="background-color: #EBF5FA;">
-                                                    <p>DoorStep Delivery </p>
-                                                    <p> Get Your Items Directly at your doorstep</p>
-                                                    <form class="mt-3" action="">
-                                                        <div class="col">
-                                                            <input type="text" class="form-control"
-                                                                placeholder="Enter your delivery email"
-                                                                aria-label="First name">
-                                                        </div>
-                                                        <button type="submit"
-                                                            class="btn my-2 rounded-0 btn-primary">Save
-                                                            Address</button>
-                                                    </form>
-                                                </div>
-                                            </div>
-                                            <div class="px-2">
-                                                <div class="row pe-1">
-                                                    <div class="col-6 ps-1 pe-0" type="button"
-                                                        data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
-                                                        aria-controls="offcanvasRight">
-                                                        <div class="p-3"
-                                                            style="background-color: #00659D; color: white;">
-                                                            Pick up Station <br>
-                                                            Pick up items from a GAPA store thats convenient for you and
-                                                            save some amount for delivery charges.
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-6 pe-0 bg-black">
-                                                        <div>
-                                                            <div class="p-3">
-                                                                <a href="">
-                                                                    <img src="https://gapaautoparts.com/images/allred.png"
-                                                                        class="img-fluid" alt="">
-                                                                </a>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-
-                                            <!-- OFF CANVAS BELOW -->
-                                            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
-                                                aria-labelledby="offcanvasRightLabel">
-                                                <div class="offcanvas-header">
-                                                    <h5 class="offcanvas-title" id="offcanvasRightLabel">Pick up
-                                                        Location
-                                                    </h5>
-                                                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
-                                                        aria-label="Close">
-                                                    </button>
-                                                </div>
-                                                <div class="offcanvas-body">
-                                                    <select class="form-select" aria-label="Default select example">
-                                                        <option selected>Select a location below</option>
-                                                        <option value="1">Abuja</option>
-                                                        <option value="2">Lagos</option>
-                                                        <option value="3">Port-Harcourt</option>
-                                                        <option value="1">Kaduna</option>
-                                                        <option value="2">Kano</option>
-                                                        <option value="3">Delta</option>
-                                                        <option value="3">Ogun</option>
-                                                        <option value="3">Benin</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                        <div class="col-6">
-                                            <div>
-                                                <a class="nav-link" href="">
-
-                                                    <div class="d-grid px-md-5 ">
-                                                        <button class="btn btn-outline-primary fw-semibold rounded-0"
-                                                            type="button">Modify Cart</button>
-
-                                                    </div>
-                                                </a>
-                                                <button type="button"
-                                                    class="btn btn-primary btn-lg rounded-0 ms-md-5 mt-3">Proceed to
-                                                    payment</button>
-                                            </div>
-                                        </div>
-                                    </div>
+                                <div class="col-3"></div>
+                            </div>
+                            <div class="my-4">
+                                <div class="row justify-content-center">
+                                    <div class="col-md-2"><a href=""><img
+                                                src="https://gapaautoparts.com/images/IOS_Gapa.png" class="img-fluid"
+                                                alt=""></a></div>
+                                    <div class="col-md-2"><a href=""><img
+                                                src="https://gapaautoparts.com/images/IOS_Gapa.png" class="img-fluid"
+                                                alt=""></a></div>
                                 </div>
                             </div>
+                        </div>
                     </section>
 
 
